--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,600;1,600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="main.css">
   <title>Frontend Mentor | Huddle landing page with alternating feature blocks</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -16,11 +17,24 @@
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
-<body>
+<body class="body">
+  <header class= "header">
+    <main>
+     <nav class="nav">
+       <ul class="nav-ul">
+         <li class="nav-ul__li">
+           <img src="images/logo.svg" alt="" class="nav-image">
+         </li> 
+         <li class="nav-ul__li nav-ul__li2">
+           <button class="nav-ul__li--button">Try It Free</button>
+          </li>
+       </ul>
+     </nav>
+    </main>
+  </header>
+  
 
-  Try It Free
-
-  Build The Community Your Fans Will Love
+  
 
   Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
   Create connections with your users as you engage in genuine discussion. 
