--- a/index.html
+++ b/index.html
@@ -31,15 +31,26 @@
        </ul>
      </nav>
     </main>
+
+
+
+
+
+
+    <section class="main__info">
+      <div class="info">
+        <h1 class="info-title">Build The Community Your Fans Will Love</h1>
+        <p class="info-pgraph">Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
+          Create connections with your users as you engage in genuine discussion.</p>
+        <button class="info-button">Get Started For Free</button>
+      </div>
+      <div class="info__img">
+        <img src="/images/illustration-mockups.svg" alt="" class="info__img--img">
+      </div>
+    </section>
+  
   </header>
-  
 
-  
-
-  Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
-  Create connections with your users as you engage in genuine discussion. 
-
-  Get Started For Free
 
   Grow Together
 
