--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
      <nav class="nav">
        <ul class="nav-ul">
          <li class="nav-ul__li">
-           <img src="images/logo.svg" alt="" class="nav-image">
+           <img src="i class="card1__image"mages/logo.svg" alt="" class="nav-image">
          </li> 
          <li class="nav-ul__li nav-ul__li2">
            <button class="nav-ul__li--button">Try It Free</button>
@@ -52,20 +52,33 @@
   </header>
 
 
-  Grow Together
 
-  Generate meaningful discussions with your audience and build a strong, loyal community. 
-  Think of the insightful conversations you miss out on with a feedback form. 
 
-  Flowing Conversations
 
-  You wouldn't paginate a conversation in real life, so why do it online? Our threads 
-  have just-in-time loading for a more natural flow.
 
-  Your Users
 
-  It takes no time at all to integrate Huddle with your app's authentication solution. 
-  This means, once signed in to your app, your users can start chatting immediately.
+
+  <section class="cards">
+    <div class="cards__card1">
+      <img src="/images/illustration-grow-together.svg" class="card__image" alt="">
+      <h2 class="card__title">Grow Together</h2>
+      <p class="card__pgraph"> Generate meaningful discussions with your audience and build a strong, loyal community. 
+        Think of the insightful conversations you miss out on with a feedback form. </p>
+    </div>
+    <div class="cards__card1">
+      <img src="/images/illustration-flowing-conversation.svg" class="card__image" alt="">
+      <h2 class="card__title">Flowing Conversations</h2>
+      <p class="card__pgraph">You wouldn't paginate a conversation in real life, so why do it online? Our threads 
+        have just-in-time loading for a more natural flow.</p>
+    </div>
+    <div class="cards__card1">
+      <img src="/images/illustration-your-users.svg" class="card__image" alt="">
+      <h2 class="card__title">Your Users</h2>
+      <p class="card__pgraph">It takes no time at all to integrate Huddle with your app's authentication solution. 
+        This means, once signed in to your app, your users can start chatting immediately.</p>
+    </div>
+  </section>
+  
 
   Ready To Build Your Community?
 
