section legal-info terminada - VERSION MOBILE TERMINADA

--- a/index.html
+++ b/index.html
@@ -108,19 +108,8 @@
       </div>
     </div>
   </footer>
-  
-
-  
-  
-
-  About Us
-  What We Do
-  FAQ
-
-  Career
-  Blog
-  Contact Us
-
-  &copy; Copyright 2018 Huddle. All rights reserved.
+  <div class="legal-info">
+    <p class="legal-info--pgraph">© Copyright 2022. Todos los derechos reservados.</p>
+  </div>
 </body>
 </html>
